# competition-platform

./: .env.example  .gitignore  README.md  call_orchestrator.py  docker-compose.prod.yml  docker-compose.yml  test_db.py  test_validation_script.sh  validate_all.sh  webhook_receiver.py
.github/: copilot-instructions.md
contracts/: engine.openapi.yaml  orchestrator.openapi.yaml
docs/: SPEC_FOR_COPILOT.md  TEST_RUNBOOK.md  VALIDATION_README.md
engine-python/: Dockerfile  README.md  pyproject.toml  validate_dod.py
engine-python/.hypothesis/constants/: 85071a6f49493bf2
engine-python/.hypothesis/examples/04e6b3400353b141/: edd954a8c0dc938f
engine-python/.hypothesis/examples/edd954a8c0dc938f/: a179df417d0ade55
engine-python/app/: main.py
engine-python/competition_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
engine-python/scripts/: seed_payload.py
engine-python/temp/: engine_payload.json  engine_result_2.json
engine-python/tests/: __init__.py  test_main.py
frontend/: package-lock.json
orchestrator-ts/: Dockerfile  README.md  package-lock.json  package.json  test_app.ts  test_integration.js  test_integration.py
orchestrator-ts/scripts/: demo-judo-27.sh  seed_db.sql
orchestrator-ts/src/: main.test.ts  main.ts
orchestrator-ts/src/adapters/: persistence.ts
