[project]
name = "competition-engine"
version = "0.1.0"
description = "Stateless competition bracket generation engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "slowapi>=0.1.9",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "hypothesis>=6.0",
]
